# hyper-dnscache

./: .travis.yml  Cargo.toml
examples/: nslookup.rs
src/: cache_storer.rs  disk_cacher.rs  lib.rs  timeout.rs
tests/: test.rs
